# d1

./: .env  README.md  pyproject.toml
d2/app/: pyproject.toml  slack_bot.py
neural_network_viz/: app.py  neural_network.py  pyproject.toml  requirements.txt
slackbot/: DEPLOYMENT.md
slackbot/app/: lambda_handler.py  main.py  slack_bot.py
